--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "jest": "^28.1.1"
   },
   "devDependencies": {
-    "@babel/plugin-transform-modules-commonjs": "^7.18.2"
+    "@babel/plugin-transform-modules-commonjs": "^7.18.2",
+    "tailwindcss": "^3.1.3"
   },
   "scripts": {
     "test": "jest"
